--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <title>i'm sorry sam</title>
+    <title>i'm sorry sam sayangku</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
     <link rel="stylesheet" href="./style.css" />
   </head>
